tests/errors/let-const.knv
fn main() -> void {
    let x = 5;
    x = 10;
    exit x;
}
